--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="logo-container">
       <video autoplay loop muted playsinline class="logo-img">
         <source src="https://files.catbox.moe/fswqj2.mp4" type="video/mp4">
-        <img src="https://i.ibb.co/ZRkyWq8W/IMG-7998.jpg" alt="ZIYA SURESHOT">
+        <img src="" alt="ZIYA SURESHOT">
       </video>
     </div>
     <div class="channel-name">ZIYA VIP FREE</div>
